css/main.css
html {
  background-color: #f2f1ed;
  font-family: Georgia, serif;
  line-height: 1.5;
}

img {
  width: 100%;
}

h1, h2 {
  color: #5d8432;
  text-transform: uppercase;
}

figcaption {
  font-size: .8rem;
  font-style: italic;
  text-align: center;
}

nav {
  font-size: 1.125rem;
  font-weight: bold;
}

nav ol {
  list-style-type: none;
}

nav a {
  color: #793284;
  text-decoration: none;
}

nav a:hover{
  color: #b42885;
  text-decoration: underline;
}

.inro{
  font-size: 1rem;
}

